// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`E2E - core Monorepo project Installs core package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Applying migration "core - 20250623095600-remove-prettier-oxc"...
Migration "core - 20250623095600-remove-prettier-oxc" applied!
Symlinking dev dependencies...
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @eslint/js
- Symlinking @prettier/plugin-oxc
- Symlinking @types/jest
- Symlinking eslint
- Symlinking eslint-config-prettier
- Symlinking eslint-plugin-jest
- Symlinking import-sort-style-module
- Symlinking jest
- Symlinking lint-staged
- Symlinking prettier
- Symlinking prettier-plugin-import-sort
- Symlinking pretty-quick
- Symlinking ts-jest
- Symlinking typescript-eslint
Symlinking dev dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - typescript

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - core Simple project Installs core package 1`] = `
"Installing ts-dev-tools...
Applying migration "core - 20201024173398-init"...
Migration "core - 20201024173398-init" applied!
Applying migration "core - 20220617100200-prettier-cache"...
Migration "core - 20220617100200-prettier-cache" applied!
Applying migration "core - 20240329200200-eslint-ignore"...
Migration "core - 20240329200200-eslint-ignore" applied!
Applying migration "core - 20240412185500-eslint-config"...
Migration "core - 20240412185500-eslint-config" applied!
Applying migration "core - 20240617094000-config-nx-scopes"...
Migration "core - 20240617094000-config-nx-scopes" applied!
Applying migration "core - 20250623095500-add-prettier-oxc"...
Migration "core - 20250623095500-add-prettier-oxc" applied!
Applying migration "core - 20250623095600-remove-prettier-oxc"...
Migration "core - 20250623095600-remove-prettier-oxc" applied!
Symlinking dev dependencies...
- Symlinking @commitlint/cli
- Symlinking @commitlint/config-conventional
- Symlinking @eslint/js
- Symlinking @prettier/plugin-oxc
- Symlinking @types/jest
- Symlinking @types/node
- Symlinking eslint
- Symlinking eslint-config-prettier
- Symlinking eslint-plugin-jest
- Symlinking import-sort-style-module
- Symlinking jest
- Symlinking lint-staged
- Symlinking prettier
- Symlinking prettier-plugin-import-sort
- Symlinking pretty-quick
- Symlinking ts-jest
- Symlinking typescript-eslint
Symlinking dev dependencies done!
Checking for duplicate dev dependencies...
Some dev dependencies are unnecessarily installed as their are already required by "@ts-dev-tools/core":
  - typescript

Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - core Simple project Installs core package 2`] = `
{
  "build": "tsc --noEmit",
  "dev": "vite",
  "format": "prettier --cache --write '**/*.ts'",
  "jest": "jest --detectOpenHandles --forceExit",
  "lint": "eslint "src/**/*.{ts,tsx}"",
  "prepare": "ts-dev-tools install",
  "preview": "vite preview",
  "test": "npm run jest --maxWorkers=50%",
  "test:ci": "npm run test:cov --runInBand",
  "test:cov": "npm run test --coverage",
  "test:watch": "npm run jest --watch --maxWorkers=25%",
}
`;

exports[`E2E - core Simple project Installs core package 3`] = `
{
  "printWidth": 100,
  "semi": true,
  "trailingComma": "es5",
}
`;

exports[`E2E - core Simple project Installs core package 4`] = `
{
  "collectCoverageFrom": [
    "**/src/**/*.[jt]s?(x)",
  ],
  "preset": "ts-jest",
  "testEnvironment": "node",
  "testMatch": [
    "**/__tests__/**/*.[jt]s?(x)",
    "**/?(*.)+(spec|test)?(.*).+(ts|tsx|js)",
  ],
}
`;
